# server-chat

./: .gitignore
client/: CMakeLists.txt  build.sh  main.cpp  test.sh
client/headers/: client.h  client_functions.h
client/sources/: client.cpp  client_functions.cpp
server/: CMakeLists.txt  README.md  main.cpp  server
server/headers/: server.h  server_functions.h
server/sources/: server.cpp  server_functions.cpp
